# robotclub_playground2026

./: CMakeLists.txt  README.md  package.xml
R1/: r1_base.service
R1/description_r1/: gazebo_control_r1.xacro  robot_core_r1.xacro  robot_r1.urdf.xacro
R1/params_r1/: R1_3D_mapping.lua  R1_ekf.yaml  R1_iRob_controller.yaml  R1_iRob_interface_esp32.yaml  R1_iRob_maneuv3r.yaml  R1_localize.lua  R1_localize_sim.lua  R1_mapping.lua  R1_mapping_sim.lua  R1_twist_mux.yaml  R1_ust08_front.yaml  irob_maneuv3r_sim_r1.yaml
R2/description_r2/: gazebo_control_r2.xacro  robot_core_r2.xacro  robot_r2.urdf.xacro
R2/params_r2/: R2_iRob_controller.yaml  R2_iRob_interface_esp32.yaml  R2_iRob_maneuv3r.yaml  R2_localize.lua  R2_mapping.lua  R2_ust08_back.yaml  R2_ust08_front.yaml
launch/: carto_localization.launch.py  carto_mapping.launch.py  launch_sim.launch.py  launch_sim_localize.launch.py  launch_sim_mapping.launch.py  rsp.launch.py
map/: playground2026_map.pbstream
models/field/: field.sdf  model.config
models/field/meshes/: Simworld.mtl  Simworld.stl
params_global/: R2_localize_sim.lua  irob_maneuv3r_sim_r1.yaml  irob_maneuv3r_sim_r2.yaml  nav2_params.yaml  nav2_rpp_params.yaml  playground_a3_to_home.csv  playground_explore1.csv  playground_run_1.csv  tracker_sim_r1.yaml
paths/: playground_explore1.csv  playground_run_2.csv  playground_run_3.csv
rviz/: playground_view.rviz
scripts/: iRob_trajec_generator.py
worlds/: robot_playground.xml
