<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotclub_playground2026</name>
  <version>0.0.0</version>
  <description>ROS2 playground for Robot Club Engineering KMITL</description>
  <maintainer email="thipok17@gmail.com">tinlethax</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
